--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "aiFlow": "tsx  sripts/aiFlow.ts"
+    "aiFlow": "tsx scripts/aiFlow.ts",
+    "readWalrus": "tsx scripts/readWalrusDescriptions.ts"
   },
   "dependencies": {
+    "@farcaster/core": "^0.15.6",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
