--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@farcaster/core": "^0.15.6",
+    "@neynar/nodejs-sdk": "^2.13.1",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "frames.js": "^0.21.3",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
